<resources>
    <string name="app_name">MobileAplicationDavaleba1</string>
    <string name="enter_your_emil_here">Enter your emil here</string>
    <string name="midtermbtueasy">MidtermBtuEasy</string>
    <string name="next">Next</string>
    <string name="okay">Okay</string>
    <string name="_100">100</string>
    <string name="click_button_to_decrease_number">Click button to decrease number</string>
    <string name="click">Click</string>
</resources>