<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="413dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#5E3CBF"
        android:gravity="center_vertical"
        android:text="@string/midtermbtueasy"
        android:textColor="@color/white"
        android:textSize="24sp"
/>


    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="188dp"
        android:layout_height="190dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:background="@drawable/shape_img"
/>

    <EditText
        android:id="@+id/Email_edit_text"
        android:layout_width="302dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:width='300dp'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:textColor="@color/black"
        android:hint="@string/enter_your_emil_here"
        android:textAlignment="textStart"
 />

    <Button
        android:id="@+id/Next_button"
        android:layout_width="103dp"
        android:layout_height="56dp"
        android:layout_marginBottom="92dp"
        android:width="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_bg"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="24sp"
 />

    <Button
        android:id="@+id/Okay_button"
        android:layout_width="103dp"
        android:layout_height="56dp"
        android:width="5dp"
        app:layout_constraintBottom_toTopOf="@+id/Next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_edit_text"
        android:background="@drawable/btn_bg"
        android:text="@string/okay"
        android:textColor="@color/black"
        android:textSize="24sp"
 />


</androidx.constraintlayout.widget.ConstraintLayout>