<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberActivity"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="68dp"
        android:background="#5E3CBF"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/midtermbtueasy"
        android:textColor="@color/white"
        android:textSize="24sp"
/>

    <TextView
        android:id="@+id/counter_text_view"
        android:layout_width="217dp"
        android:layout_height="217dp"
        android:background="@drawable/circle_bg"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
        android:text="@string/_100"
        android:textSize="75sp"
        android:gravity="center"
        android:textColor="@color/black"
/>

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"
/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.896"
        android:text="@string/click_button_to_decrease_number"
        android:textColor="#A5000000"
        android:textSize="24sp"
 />

    <Button
        android:id="@+id/button"
        android:layout_width="114dp"
        android:layout_height="61dp"
        android:layout_marginBottom="168dp"
        android:width="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="@string/click"
        android:textColor="@color/black"
        android:textSize="24sp"
 />

</androidx.constraintlayout.widget.ConstraintLayout>